# zygisk_LQ

./: README.md  build.py
.github/workflows/: main.yml
my_build/debug/arm64-v8a/: CMakeCache.txt
native/: CMakeLists.txt  main.cpp
template/: customize.sh  module.prop
